--- a/index.html
+++ b/index.html
@@ -1,24 +1,3 @@
-<!DOCTYPE html>
-<html lang="zh-Hant">
-<head>
-  <meta charset="UTF-8" />
-  <title>正在載入 AR 模型...</title>
-  <!-- 這行會在 0.1 秒後自動跳轉到 .usdz 模型 -->
-  <meta http-equiv="refresh" content="0.1;url=https://ian9911007.github.io/USDZ/Bottle_opener.usdz">
-  <style>
-    body {
-      font-family: -apple-system, BlinkMacSystemFont, sans-serif;
-      background-color: #ffffff;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      height: 100vh;
-      font-size: 20px;
-      color: #888;
-    }
-  </style>
-</head>
-<body>
-  正在載入 AR 模型…
-</body>
-</html>
+<a rel="ar" href="https://yourdomain.com/model.usdz">
+  <img src="https://raw.githubusercontent.com/ian9911007/USDZ/refs/heads/main/catt.jpg" alt="3D 模型">
+</a>
