--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
 <a rel="ar" href="https://yourdomain.com/model.usdz">
-  <img src="https://raw.githubusercontent.com/ian9911007/USDZ/refs/heads/main/catt.jpg" alt="3D 模型">
+  <img src="
+https://ian9911007.github.io/USDZ/catt.jpg" alt="3D 模型">
 </a>
